--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,196 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+version: 2
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+  testFeatureBranchesReact:
+    resource_class: small
     docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+      - image: docker:18.06.3-ce-git
     steps:
       - checkout
+      - setup_remote_docker
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+          name: Build react application Docker image
+          no_output_timeout : 1h
+          command: |
+            docker run -e CI=true ulminase/hello-world:latest
+      ###############################################################
+  testFeatureBranchesExpress:
+      resource_class: small
+      docker:
+        - image: docker:18.06.3-ce-git
+      steps:
+        - checkout
+        - setup_remote_docker
+        - run:
+            name: Build Express application Docker image
+            no_output_timeout : 1h
+            command: |
+              docker run -e CI=true ulminase/hello-world:latest
+  testFeatureBranchesReact1:
+    resource_class: small
+    docker:
+      - image: docker:18.06.3-ce-git
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: Build react application Docker image
+          no_output_timeout : 1h
+          command: |
+            docker run -e CI=true ulminase/hello-world:latest
+      
+  testFeatureBranchesExpress1:
+      resource_class: small
+      docker:
+        - image: docker:18.06.3-ce-git
+      steps:
+        - checkout
+        - setup_remote_docker
+        - run:
+            name: Build Express application Docker image
+            no_output_timeout : 1h
+            command: |
+              docker run -e CI=true ulminase/hello-world:latest
+  testFeatureBranchesReact2:
+    resource_class: small
+    docker:
+      - image: docker:18.06.3-ce-git
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: Build react application Docker image
+          no_output_timeout : 1h
+          command: |
+            docker run -e CI=true ulminase/hello-world:latest
+      
+  testFeatureBranchesExpress2:
+      resource_class: small
+      docker:
+        - image: docker:18.06.3-ce-git
+      steps:
+        - checkout
+        - setup_remote_docker
+        - run:
+            name: Build Express application Docker image
+            no_output_timeout : 1h
+            command: |
+              docker run -e CI=true ulminase/hello-world:latest
+  testFeatureBranchesReact3:
+    resource_class: small
+    docker:
+      - image: docker:18.06.3-ce-git
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: Build react application Docker image
+          no_output_timeout : 1h
+          command: |
+            docker run -e CI=true ulminase/hello-world:latest
+      
+  testFeatureBranchesExpress3:
+      resource_class: small
+      docker:
+        - image: docker:18.06.3-ce-git
+      steps:
+        - checkout
+        - setup_remote_docker
+        - run:
+            name: Build Express application Docker image
+            no_output_timeout : 1h
+            command: |
+              docker run -e CI=true ulminase/hello-world:latest
+  testFeatureBranchesReact4:
+    resource_class: small
+    docker:
+      - image: docker:18.06.3-ce-git
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: Build react application Docker image
+          no_output_timeout : 1h
+          command: |
+            docker run -e CI=true ulminase/hello-world:latest
+      
+  testFeatureBranchesExpress4:
+      resource_class: small
+      docker:
+        - image: docker:18.06.3-ce-git
+      steps:
+        - checkout
+        - setup_remote_docker
+        - run:
+            name: Build Express application Docker image
+            no_output_timeout : 1h
+            command: |
+              docker run -e CI=true ulminase/hello-world:latest
+        
+        
 workflows:
-  say-hello-workflow:
+  version: 2
+  build_test_feature:
     jobs:
-      - say-hello
+      - testFeatureBranchesReact:
+          filters:
+            branches:
+              ignore:
+                - main
+                - master
+      - testFeatureBranchesExpress:
+          filters:
+            branches:
+              ignore:
+                - main
+                - master
+      - testFeatureBranchesReact1:
+          filters:
+            branches:
+              ignore:
+                - main
+                - master
+      - testFeatureBranchesExpress1:
+          filters:
+            branches:
+              ignore:
+                - main
+                - master
+      - testFeatureBranchesReact2:
+          filters:
+            branches:
+              ignore:
+                - main
+                - master
+      - testFeatureBranchesExpress2:
+          filters:
+            branches:
+              ignore:
+                - main
+                - master
+
+      - testFeatureBranchesReact3:
+          filters:
+            branches:
+              ignore:
+                - main
+                - master
+      - testFeatureBranchesExpress3:
+          filters:
+            branches:
+              ignore:
+                - main
+                - master
+
+      - testFeatureBranchesReact4:
+          filters:
+            branches:
+              ignore:
+                - main
+                - master
+      - testFeatureBranchesExpress4:
+          filters:
+            branches:
+              ignore:
+                - main
+                - master
+     
